[ADD] update JDK21